--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,9 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link {% if active == 0 %}active{% endif %}" href="/">首页</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/admin" target="_blank">管理员界面</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="/admin" target="_blank">管理员界面</a>#}
+{#                </li>#}
                 <li class="nav-item">
                     <a class="nav-link {% if active == 1 %}active{% endif %}" href="/datas/1">政府数据</a>
                 </li>
