--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,16 +17,24 @@ header {
     margin-bottom: 0;
 }
 
+.container-page {
+    display: flex;
+    flex-direction: column;
+    min-height: 95vh;
+}
+
 .container-content {
     margin-left: 0;
     margin-right: 0;
-    height: 86%;
+    /*height: 80%;*/
+    min-height: 70vh;
     width: 100%;
-    flex-grow: 1;
+    flex: 1;
 }
 
 .this-row {
     height: 100%;
+    min-height: 95vh;
     width: 100%;
 }
 
@@ -41,7 +49,7 @@ header {
 }
 
 .this-footer {
-    position: fixed;
-    bottom: 0;
+    /*position: relative;*/
+    /*bottom: 0;*/
     width: 100%;
 }
