--- a/templates/dataDemo.html
+++ b/templates/dataDemo.html
@@ -14,7 +14,12 @@
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"
+            integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
+            integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha"
+            crossorigin="anonymous"></script>
 
 
 
@@ -46,10 +51,17 @@
                         </a>
                     </li>
                     <li>
+                        <a class="nav-link link-dark" id="v-pills-wordcloud-tab" data-bs-toggle="pill"
+                           href="#v-pills-wordcloud" role="tab" aria-controls="v-pills-wordcloud" aria-selected="false">
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#cloud"></use>
+                            </svg>
+                            词云
+                        </a>
                         <a class="nav-link link-dark" id="v-pills-graph-tab" data-bs-toggle="pill"
                            href="#v-pills-graph" role="tab" aria-controls="v-pills-graph" aria-selected="false">
                             <svg class="bi me-2" width="16" height="16">
-                                <use xlink:href="#cloud"></use>
+                                <use xlink:href="#table"></use>
                             </svg>
                             词云
                         </a>
@@ -97,12 +109,46 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="tab-pane fade w-100 h-100" id="v-pills-graph" role="tabpanel" aria-labelledby="v-pills-graph-tab"
-{#                     style="width: 100% ;height: 100%"#}
-                >
-                    <div id="wordcloud" class=" w-50 h-50 top-50 start-50 translate-middle"
-{#                         style="width: 100vh; height: 60vh;"#}
-                    ></div>
+                <div class="tab-pane fade w-100 h-100" id="v-pills-wordcloud" role="tabpanel"
+                     aria-labelledby="v-pills-wordcloud-tab">
+                    <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" id="styleDropdown"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                            TOTAL
+                        </button>
+                        <ul class="dropdown-menu" id="dropdownList" aria-labelledby="styleDropdown"
+                            style="max-height: 50vh;overflow-y: auto;">
+                        </ul>
+                    </div>
+                    {#                    <div class="row">#}
+                    {#                        <div class="col-md-6">#}
+                    <div id="wordcloud" class=" w-50 h-50 top-50 start-50 translate-middle"></div>
+                    {#                        </div>#}
+                    {#                        <div class="col-md-6">#}
+                    {#                            <div id="wordcloud1" class=" w-50 h-50 top-50 start-50 translate-middle"></div>#}
+                    {#                        </div>#}
+                    {#                    </div>#}
+                </div>
+                <div class="tab-pane fade w-100 h-100" id="v-pills-graph" role="tabpanel"
+                     aria-labelledby="v-pills-graph-tab">
+                    <main class=" ms-sm-auto px-md-4">
+                        <!-- col-md-9 col-lg-10-->
+                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                            <h1 class="h2">热词关注跟踪</h1>
+                            <div class="btn-toolbar mb-2 mb-md-0">
+                                <div class="btn-group me-2">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                                </div>
+                                <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+                                    <span data-feather="calendar"></span>
+                                    This week
+                                </button>
+                            </div>
+                        </div>
+
+                        <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+                    </main>
                 </div>
             </div>
         </div>
@@ -111,60 +157,215 @@
 
 {% block script %}
     <script type="text/javascript">
-        $(document).ready(function () {
+
+        const getDataType = function () {
             const dataTypeMeta = document.querySelector('meta[name="datatype"]');
             console.log(dataTypeMeta)
             const datatype = dataTypeMeta.getAttribute('content').toString()
             console.log(datatype)
-            {#var rowHeight = $('#myTable').DataTable().row(1).node().clientHeight;#}
-            let tableConfig = {
-                'debug': true,
-                'autoWidth': false,
-                'serverSide': true,
-                'searching': false,
-                'paging': true,
-                'lengthChange': false,
-                'info': false,
-                'deferRender': true,
-                'scrollY': "calc(10 * 43px)",
-                'scrollX': true,
-                'scroller': {'loadingIndicator': true},
-                columns: [
-                    {'title': "发布日期", 'data': "发布日期"},
-                    {'title': "地区", 'data': "地区"},
-                    {'title': "类型", 'data': "类型"},
-                    {'title': "来源", 'data': "来源"},
-                    {'title': "级别", 'data': "级别"},
-                    {'title': "标题", 'data': "标题"},
-                ],
+            return datatype
+        }
+        const updateTable = (datatype, table) => {
+            $.ajax({
+                url: `/datas/${datatype}/updateTable`,
+                method: 'GET',
+                success: function (data) {
+                    table.clear();
+                    table.rows.add(data);
+                    table.draw();
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error fetching new data:', error);
+                }
+            });
+        };
+        let tableConfig = {
+            'debug': true,
+            'autoWidth': false,
+            'serverSide': true,
+            'searching': false,
+            'paging': true,
+            'lengthChange': false,
+            'info': false,
+            'deferRender': true,
+            'scrollY': "calc(10 * 43px)",
+            'scrollX': true,
+            'scroller': {'loadingIndicator': true},
+            columns: [
+                {'title': "发布日期", 'data': "发布日期"},
+                {'title': "地区", 'data': "地区"},
+                {'title': "类型", 'data': "类型"},
+                {'title': "来源", 'data': "来源"},
+                {'title': "级别", 'data': "级别"},
+                {'title': "标题", 'data': "标题"},
+            ],
+        };
+        const fetchWordFrequencyData = async (datatype, regionId) => {
+            try {
+                const response = await fetch(`/datas/${datatype}/wordCloud?region_id=${regionId}`, {method: 'GET'});
+                {#console.log(data);#}
+                {#console.log(data['word_freq']);#}
+                return await response.json();
+            } catch (error) {
+                console.error('Error fetching word frequency data:', error);
+                throw error;
+            }
+        };
+
+
+        $(document).ready(async function () {
+            let datatype = getDataType()
+
+            //表格
+            tableConfig.ajax = `/datas/${datatype}/updateTable`
+            let table = $('#myTable').DataTable(tableConfig);
+
+            const generateWordCloudConfig = () => {
+                let maskImage = new Image();
+                const wordCloudOptions = {
+                    tooltip: {},
+                    series: [{
+                        type: 'wordCloud',
+                        shape: 'circle',
+                        maskImage: maskImage,
+                        gridSize: 8,
+                        sizeRange: [12, 50],
+                        rotationRange: [-90, 90],
+                        left: 'center',
+                        top: 'center',
+                        {#right: null,#}
+                        {#bottom: null,#}
+                        width: '100%',
+                        height: '100%',
+                        rotationStep: 45,
+                        drawOutOfBound: false,
+                        shrinkToFit: true,
+                        layoutAnimation: true,
+                        keepAspect: true,
+                        textStyle: {
+                            fontFamily: 'sans-serif',
+                            fontWeight: 'bold',
+                            color: function () {
+                                return 'rgb(' + [
+                                    Math.round(Math.random() * 160),
+                                    Math.round(Math.random() * 160),
+                                    Math.round(Math.random() * 160)
+                                ].join(',') + ')';
+                            }
+                        },
+                        emphasis: {
+                            textStyle: {
+                                textShadowBlur: 10,
+                                textShadowColor: '#333'
+                            }
+                        },
+                        data: []
+                    }]
+                };
+                maskImage.src = "{% static 'image/cloud.png' %}"
+                return wordCloudOptions
             };
 
-            if (1) {
-                console.log(`/datas/${datatype}/updateTable`)
-                tableConfig.ajax = `/datas/${datatype}/updateTable`
-            } else {
-                tableConfig.serverSide = false;
-                tableConfig['data'] = initialData.data;
-            }
-            let table = $('#myTable').DataTable(tableConfig);
-            // console.log('271')
-            const updateTable = () => {
-                $.ajax({
-                    url: `/datas/${datatype}/updateTable`,
-                    method: 'GET',
-                    success: function (data) {
-                        // localStorage.setItem('tableData', JSON.stringify(data));
-                        // console.log(data);
-                        // console.log(table.rows);
-                        table.clear();
-                        table.rows.add(data);
-                        table.draw();
-                    },
-                    error: function (xhr, status, error) {
-                        console.error('Error fetching new data:', error);
-                    }
+            const wordcloudDiv = document.getElementById('wordcloud');
+            const chart = echarts.init(wordcloudDiv);
+            const wordCloudOptions = generateWordCloudConfig();
+
+            const data = await fetchWordFrequencyData(datatype, 0);
+
+            const freqData = data['word_freq'];
+            const dropdownListData = data['area_list'];
+
+            const updateWordCloud = (data = freqData) => {
+
+                if (data.length) {
+                    wordCloudOptions.series[0].data = data;
+                } else {
+                    wordCloudOptions.series[0].data = [{'name': '@TEST@', 'value': 1}];
+                }
+                chart.setOption(wordCloudOptions);
+                chart.resize();
+            };
+
+            const generateDropdownList = (datatype) => {
+                console.log("data:", data);
+                dropdownListData.forEach(region => {
+                    const listItem = $('<li>');
+                    const link = $('<a>', {
+                        class: 'dropdown-item',
+                        href: '#',
+                        text: region.name,
+                        on: {
+                            click: () => {
+                                $('#styleDropdown').text(region.name);
+
+                                switchRegion(datatype, region.id)
+                            }
+                        }
+                    });
+                    listItem.append(link);
+                    $('#dropdownList').append(listItem);
                 });
             };
+
+            const switchRegion = async (datatype, regionId) => {
+                //{#console.log(regionId);#}
+                const data = await fetchWordFrequencyData(datatype, regionId);
+
+                updateWordCloud(data['word_freq']);
+
+            };
+
+            const generateFreqGraph = () => {
+                'use strict'
+                feather.replace({'aria-hidden': 'true'})
+
+                // Graphs
+                var ctx = document.getElementById('myChart')
+                // eslint-disable-next-line no-unused-vars
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: [
+                            'Sunday',
+                            'Monday',
+                            'Tuesday',
+                            'Wednesday',
+                            'Thursday',
+                            'Friday',
+                            'Saturday'
+                        ],
+                        datasets: [{
+                            data: [
+                                15339,
+                                21345,
+                                18483,
+                                24003,
+                                23489,
+                                24092,
+                                12034
+                            ],
+                            lineTension: 0,
+                            backgroundColor: 'transparent',
+                            borderColor: '#007bff',
+                            borderWidth: 4,
+                            pointBackgroundColor: '#007bff'
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        },
+                        legend: {
+                            display: false
+                        }
+                    }
+                })
+            }
+
             $('#myTable thead th').each(function () {
                 $(this).click(function () {
                     var table = $('#myTable').DataTable();
@@ -175,7 +376,7 @@
             });
 
             $('#updateTable').on('click', function () {
-                updateTable();
+                updateTable(datatype, table)
             });
 
             $('#importData').on('click', function () {
@@ -184,7 +385,7 @@
                     method: 'GET',
                     data: {task_type: 'gov_data_import', task_params: ''},
                     success: function () {
-                        updateTable();
+                        updateTable(datatype, table);
                     },
                     error: function (xhr, status, error) {
                         console.error('Error fetching new data:', error);
@@ -224,86 +425,29 @@
                     }
                 });
             });
-            const wordcloudDiv = document.getElementById('wordcloud');
-            const chart = echarts.init(wordcloudDiv);
-            {#console.log(chart)#}
-            var maskImage = new Image();
 
-            const wordCloudOptions = {
-                tooltip: {},
-                series: [{
-                    type: 'wordCloud',
-                    shape: 'circle',
-                    maskImage: maskImage,
-                    gridSize: 8,
-                    sizeRange: [12, 50],
-                    rotationRange: [-90, 90],
-                    left: 'center',
-                    top: 'center',
-                    {#right: null,#}
-                    {#bottom: null,#}
-                    width: '100%',
-                    height: '100%',
-                    rotationStep: 45,
-                    drawOutOfBound: false,
-                    shrinkToFit: true,
-                    layoutAnimation: true,
-                    keepAspect: true,
-                    textStyle: {
-                        fontFamily: 'sans-serif',
-                        fontWeight: 'bold',
-                        color: function () {
-                            return 'rgb(' + [
-                                Math.round(Math.random() * 160),
-                                Math.round(Math.random() * 160),
-                                Math.round(Math.random() * 160)
-                            ].join(',') + ')';
-                        }
-                    },
-                    emphasis: {
-                        textStyle: {
-                            textShadowBlur: 10,
-                            textShadowColor: '#333'
-                        }
-                    },
-                    data: []
-                }]
-            };
-            maskImage.src = "{% static 'image/cloud.png' %}"
-            {#maskImage.src = "{% static 'image/logo.png' %}"#}
+            //<!--词云图-->
 
-            const updateWordCloud = (data = []) => {
-                if (data.length) {
-                    wordCloudOptions.series[0].data = data;
-                }
-                chart.setOption(wordCloudOptions);
-                chart.resize();
-            };
-
-            const fetchWordFrequencyData = () => {
-                fetch(`/datas/${datatype}/wordCloud`, {method: 'GET'})
-                    .then(response => response.json())
-                    .then(data => {
-                        updateWordCloud(data.word_freq);
-                        console.log(data);
-
-                    })
-                    .catch(error => {
-                        console.error('Error fetching word frequency data:', error);
-                    });
-            };
-
-            fetchWordFrequencyData();
 
             window.addEventListener('resize', function () {
                 chart.resize();
             });
 
             $('a[data-bs-toggle="pill"]').on('shown.bs.tab', function (e) {
-                if ($(e.target).attr('id') === 'v-pills-graph-tab') {
+                if ($(e.target).attr('id') === 'v-pills-wordcloud-tab') {
                     updateWordCloud();
                 }
             });
+
+            //<!--函数调用-->
+
+
+            updateWordCloud(freqData);
+
+
+            generateDropdownList(datatype, dropdownListData, chart, wordCloudOptions);
+
+            generateFreqGraph()
         });
     </script>
 
