refactor(frontend): refractor template html structure

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'template/base.html' %}
 {#{% load static %}#}
 {% block title %}信息系统首页{% endblock %}
 {% block head %}
 
 {% endblock %}
 {% block navbar %}
-{% include 'navbar.html' with active=0 %}
+{% include 'template/navbar.html' with active=0 %}
 {% endblock %}
 {% block content %}
     <div class=" col-right ">
