--- a/templates/template/template.html
+++ b/templates/template/template.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'template/base.html' %}
 {% load static %}
 
 {% block title %}{% endblock %}
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block navbar %}
-    {% include 'navbar.html' with active='EDIT HERE' %}
+    {% include 'template/navbar.html' with active='EDIT HERE' %}
 {% endblock %}
 
 {% block content %}
