--- a/templates/template/navbar.html
+++ b/templates/template/navbar.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-labelledby="navbarNav">
     <div class="container">
-        <a class="navbar-brand" href="/">信息系统</a>
+        <a class="navbar-brand" href="/static">信息系统</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link {% if active == 0 %}active{% endif %}" href="/">首页</a>
+                    <a class="nav-link {% if active == 0 %}active{% endif %}" href="/static">首页</a>
                 </li>
                 {#                <li class="nav-item">#}
                 {#                    <a class="nav-link" href="/admin" target="_blank">管理员界面</a>#}
