--- a/templates/datas/table.html
+++ b/templates/datas/table.html
@@ -1,21 +1,27 @@
 {% load static %}
 {% block import %}
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-{#    <script src="{% static 'JavaScript/jquery/jquery-3.6.0.js' %}"></script>#}
+    <!-- 引入 CSS 文件 -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+    <link href="https://releases.transloadit.com/uppy/v2.0.1/uppy.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+    <!-- 引入 Uppy JavaScript 文件 -->
+    <script src="https://releases.transloadit.com/uppy/v2.0.1/uppy.min.js"></script>
+    <script src="https://releases.transloadit.com/uppy/locales/v3.0.7/zh_CN.min.js"></script>
+
+
 {% endblock %}
 
 {% block content %}
 
     <div class="tab-pane fade show active" id="v-pills-form" role="tabpanel"
          aria-labelledby="v-pills-form-tab" style="width: 100% ;height: 100%">
-
         <button class="btn btn-primary mb-3" id="importData">导入数据</button>
-        <button class="btn btn-primary mb-3" id="updateTable">更新数据</button>
-        <button class="btn btn-primary mb-3" id="wordSplit">分词统计</button>
+{#        <button class="btn btn-primary mb-3" id="updateTable">开始分词</button>#}
+{#        <button class="btn btn-primary mb-3" id="wordSplit">分词统计</button>#}
         <br>
         <h1 align="center">
 
@@ -28,6 +34,19 @@
             <tbody>
             </tbody>
         </table>
+    </div>
+    <div class="modal fade" id="uppyModal" tabindex="-1" aria-labelledby="uppyModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="uppyModalLabel">上传文件</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="uppy"></div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 {% block javascript %}
@@ -74,6 +93,40 @@
                     });
                 }
             };
+            const UpLoadPanel = {
+                init: function (datatype) {
+                    const uppy = new Uppy.Core({
+                        autoProceed: false,
+                        restrictions: {
+                            maxFileSize: 1024 * 1024 * 1024,
+                        },
+                        locale: Uppy.locales.zh_CN,
+                    });
+
+
+                    uppy.use(Uppy.Dashboard, {
+                        inline: true,
+                        target: '#uppy',
+                        showLinkToFileUploadResult: false,
+                        proudlyDisplayPoweredByUppy: false,
+                        note: '最大文件大小：1024MB',
+                        // 添加一个上传按钮
+                        doneButtonHandler: () => {
+                            uppy.upload().catch((error) => {
+                                console.error('Error uploading files:', error);
+                            });
+                        },
+                    });
+                    uppy.use(Uppy.XHRUpload, {
+                        endpoint: `/datas/${datatype}/upload`, // 替换为 Django 的 URL
+                        fieldName: 'uploadFile',
+                    });
+
+                    uppy.on('complete', (result) => {
+                        console.log('Upload complete! We’ve uploaded these files:', result.successful);
+                    });
+                }
+            }
             const EventHandlers = {
                 tableHeaderClick: function (table) {
                     $('#myTable thead th').each(function () {
@@ -89,9 +142,11 @@
                         Table.update(datatype, table);
                     });
                 },
-                importDataButtonClick: function (datatype, table) {
+                importDataButtonClick: function () {
                     $('#importData').on('click', function () {
-                        // ... (original importData click event handler)
+                        // 显示模态框
+                        const modal = new bootstrap.Modal(document.getElementById('uppyModal'));
+                        modal.show();
                     });
                 },
                 wordSplitButtonClick: function (datatype) {
@@ -110,10 +165,12 @@
                 {#const datatype={{ datatype  }}#}
                 const table = Table.init({{datatype}})
                 Table.update({{datatype}}, table);
+                UpLoadPanel.init({{datatype}})
                 EventHandlers.tableHeaderClick(table);
-                EventHandlers.updateTableButtonClick({{datatype}}, table);
-                EventHandlers.importDataButtonClick({{datatype}}, table);
-                EventHandlers.wordSplitButtonClick({{datatype}});
+                EventHandlers.importDataButtonClick();
+                {#EventHandlers.updateTableButtonClick({{datatype}}, table);#}
+                {#EventHandlers.wordSplitButtonClick({{datatype}});#}
+                {#const UpLoad = new UpLoad();#}
             });
         })();
     </script>
