--- a/templates/home.html
+++ b/templates/home.html
@@ -74,6 +74,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">查看图表</h5>
+                            <p class="card-text text-secondary">查看发展指数图表</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/report/graph" class="btn btn-primary">查看详情</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
