--- a/templates/template/template.html
+++ b/templates/template/template.html
@@ -9,6 +9,7 @@
 
 {% block navbar %}
     {% include 'template/navbar.html' with active='EDIT HERE' %}
+    {#TODO#}
 {% endblock %}
 
 {% block content %}
