--- a/templates/datas/wordcloud.html
+++ b/templates/datas/wordcloud.html
@@ -2,8 +2,9 @@
 {% block import %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>
-    <script src="{% static 'JavaScript/wordcloud/echarts-wordcloud.js' %}"></script>
+{#    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>#}
+    <script src="{% static 'JavaScript/echarts/echarts_5.3.0.min.js' %}"></script>
+    <script src="{% static 'JavaScript/echarts/wordcloud/echarts-wordcloud.js' %}"></script>
     {#    <script type="text/javascript" src="{% static 'JavaScript/datas/datas.js' %}"></script>#}
 
 {% endblock %}
