--- a/templates/reports/graph.html
+++ b/templates/reports/graph.html
@@ -10,9 +10,11 @@
 {% block head %}
     {#    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">#}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.0/extension/dataTool.min.js"></script>
-    <script src="{% static 'JavaScript/echarts/china.js' %}"></script>
+    {#    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>#}
+    <script src="{% static 'JavaScript/echarts/echarts_5.3.0.min.js' %}"></script>
+{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.0/extension/dataTool.min.js"></script>#}
+    <script src="{% static 'JavaScript/echarts/extension/dataTool_5.3.0.min.js' %}"></script>
+    <script src="{% static 'JavaScript/echarts/map/china.js' %}"></script>
 
 
 {% endblock %}
