--- a/templates/reports/graph.html
+++ b/templates/reports/graph.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {#    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>#}
     <script src="{% static 'JavaScript/echarts/echarts_5.3.0.min.js' %}"></script>
-{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.0/extension/dataTool.min.js"></script>#}
+    {#    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.0/extension/dataTool.min.js"></script>#}
     <script src="{% static 'JavaScript/echarts/extension/dataTool_5.3.0.min.js' %}"></script>
     <script src="{% static 'JavaScript/echarts/map/china.js' %}"></script>
 
@@ -71,7 +71,8 @@
                             'csrfmiddlewaretoken': '{{ csrf_token }}'
                         },
                         success: function (data) {
-                            $('#chart').html(data.chart);
+                            console.log(data.chart);
+                            $('#chart').empty().html(data.chart);
                         },
                         error: function (xhr, status, error) {
                             console.error('Error fetching new data:', error);
