style: 去除无用打印

--- a/templates/datas/dataDemo.html
+++ b/templates/datas/dataDemo.html
@@ -47,7 +47,7 @@
 
             const DropdownList = {
                 generate: function (dropDownLoc, data, onSelect) {
-                    console.log("data:", data);
+                    {#console.log("data:", data);#}
                     data.forEach(item => {
                         // console.log("item:", item)
                         const listItem = $('<li>');
